# openfang

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dist  README.md  docker-compose.yml  openfang.toml.example  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  routes.rs  server.rs  ws.rs
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/js/: api.js  app.js
crates/openfang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/openfang-cli/: Cargo.toml
crates/openfang-cli/src/: cli.rs  daemon.rs  dotenv.rs  main.rs  templates.rs
crates/openfang-cli/src/cmd/: agent.rs  config.rs  init.rs  integration.rs  mod.rs  model.rs  system.rs  telos.rs  workflow.rs
crates/openfang-extensions/src/: health.rs
crates/openfang-hands/: Cargo.toml
crates/openfang-hands/src/: lib.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: config.rs  config_reload.rs  kernel.rs  metering.rs  registry.rs
crates/openfang-memory/src/: migration.rs  substrate.rs
crates/openfang-runtime/src/: agent_loop.rs  audit.rs  compactor.rs  image_gen.rs  lib.rs  model_catalog.rs  prompt_builder.rs  routing.rs  session_repair.rs  tool_runner.rs  tts.rs
crates/openfang-skills/src/: bundled.rs  lib.rs
crates/openfang-telos/: Cargo.toml
crates/openfang-telos/src/: injector.rs  lib.rs  templates.rs
crates/openfang-types/src/: config.rs
docs/: telos.md
scripts/: install-octarq.sh  install.ps1
(+20 files in other folders)
