[package]
name = "openfang-telos"
version = "0.1.0"
edition = "2021"
authors = ["Octarq Contributors"]
description = "TELOS Goal System for Octarq Agent OS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
